--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,9 +21,10 @@ $orange: #f6993f;
 $yellow: #ffed4a;
 $cyan: #6cb2eb;
 $turq: #00cecd;
-$blue: #1b71f3;
 $violet: #8e00fe;
+$blue: #1b71f3;
 $hanblue: #5e15d1;
+$privateBlue: #033860;
 $green: #00e09d;
 $darkGreen: #21afae;
 $pink: #ed0373;
