--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -56,13 +56,19 @@
         .compare-button-title {
             cursor: pointer;
 
-            svg {
+            svg { // #compare_heart
                 width: 30px;
                 height: 30px;
                 overflow: visible;
                 margin-right: 10px;
                 transition: $transition;
                 transform-origin: 50% 50%;
+
+                #wishlist {
+                    stroke: #fff;
+                    stroke-width: 1px;
+                    fill: $teal;
+                }
 
                 &.has-count {
                     transform-origin: 50% 50%;
@@ -80,6 +86,13 @@
                         animation: heartBeat .5s ease-in-out;
                         animation-fill-mode: forwards;
                         animation-iteration-count: 2;
+                    }
+                }
+
+                &.active {
+                    #wishlist { // The inner heart path
+                        fill: $pink;
+                        stroke: $pink;
                     }
                 }
             }
@@ -180,11 +193,6 @@
                 overflow: hidden;
             }
         }
-    }
-
-    .solutions-compare-heart.active {
-        fill: $pink;
-        stroke: $pink;
     }
 }
 
