Display none on popovers when shortlist open.

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -535,3 +535,11 @@
         margin-left: 10px;
     }
 }
+
+.shortlist-open {
+    overflow: hidden;
+
+    .popover {
+        display: none !important;
+    }
+}
