--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -317,3 +317,33 @@
         flex-direction: row;
     }
 }
+
+// Animate linear gradients
+@mixin gradient-animation( $fromStart, $toStart, $fromEnd, $toEnd, $transTime ){
+    background-size: 100%;
+    background-image: linear-gradient($fromStart, $toStart);
+    position: relative;
+    z-index: 100;
+
+    &:before {
+        background-image: linear-gradient($fromEnd, $toEnd);
+        background-size: 100% !important;
+        border-radius: inherit;
+        content: '';
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        z-index: -100;
+        transition: opacity $transTime ease;
+    }
+
+    &:hover {
+        &:before {
+            opacity: 1;
+        }
+    }
+}
