--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-image: linear-gradient(to right, #00de9d 0%, #00cecb 100%);
+    background-image: linear-gradient(to right, $green 0%, $teal 100%);
     z-index: 1040;
 
     .compare-hospitals-header {
