--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -9,7 +9,6 @@
     border-radius: 100px;
     color: $white;
     padding: 14px 26px;
-    background-size: 300% 100% !important;
     background-position: left;
     position: relative;
     text-align: left;
@@ -17,8 +16,16 @@
 
     &:hover {
         color: $white;
-        background-position: right !important;
     }
+
+    &.btn-grad {
+        background-size: 300% 100% !important;
+
+        &:hover {
+            background-position: right !important;
+        }
+    }
+
 
     svg, i {
         position: absolute;
@@ -141,6 +148,7 @@
                 fill: #fff;
             }
         }
+
         //
         // &:after {
         //    content: '';
@@ -527,30 +535,24 @@
         }
 
         // Button on the floating green bar
+    }
+}
 
+// Back to top button
+.btn-back-to-top {
+    padding: 16px 50px 16px 20px;
+    color: $white;
+    min-width: 182px;
+    border-radius: 10px 10px 0 0;
+    @include font-size(22);
+    letter-spacing: -0.66px;
 
-        // Back to top button
-        &.btn-back-to-top {
-            padding: 0 50px 0 20px;
-            color: $white;
-            height: 60px;
-            line-height: 60px;
-            background-color: $turq;
-            min-width: 182px;
-            border-radius: 10px 10px 0 0;
-            @include font-size(22);
-            letter-spacing: -0.66px;
+    @include gradient-animation($turq, $turq, $turq, $green, 0.3s);
 
-            svg {
-                position: absolute;
-                right: 20px;
-                top: 20px;
-            }
-
-            &:hover {
-                background-position: right;
-            }
-        }
+    svg {
+        position: absolute;
+        right: 20px;
+        top: 20px;
     }
 }
 
