- Black border (on top of the main line) needs has been removed - Spacing in between share buttons has been standardised

--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -144,8 +144,8 @@
             width: 20px;
 
             svg {
-                height: 24px;
-                width: auto;
+                height: 25px;
+                width: 25px;
 
                 path {
                     fill: $grey;
