Pagination with 'Previous' and 'Next'

--- a/resources/sass/components/_pagination.scss
+++ b/resources/sass/components/_pagination.scss
@@ -10,7 +10,7 @@
     .page-item {
         &:first-child,
         &:last-child {
-            display: none;
+            //display: none;
         }
 
         &.disabled {
