back to top button bug fix.

--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -323,7 +323,12 @@
     background-size: 100%;
     background-image: linear-gradient($fromStart, $toStart);
     position: relative;
-    z-index: 100;
+    z-index: 1;
+
+    span {
+        position: relative;
+        z-index: 5;
+    }
 
     &:before {
         background-image: linear-gradient($fromEnd, $toEnd);
@@ -337,7 +342,7 @@
         top: 0;
         left: 0;
         opacity: 0;
-        z-index: -100;
+        z-index: -1;
         transition: opacity $transTime ease;
     }
 
