--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -1,5 +1,5 @@
-body {
-    letter-spacing: -1px;
+body, * {
+    letter-spacing: $letter-spacing;
 }
 
 .cookie-page,
@@ -31,9 +31,7 @@ ul.bullets {
     li {
         list-style: none;
         @include font-size(16);
-        //line-height: 2;
         font-weight: 400;
-        letter-spacing: -0.65px;
         position: relative;
         padding-left: 30px;
         margin-bottom: 6px;
@@ -119,7 +117,6 @@ input.big,
 select.big {
     font-size: 18px;
     font-weight: 500;
-    letter-spacing: -0.9px;
     height: 60px;
     line-height: 60px;
     padding: 0 45px 0 16px;
