--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,9 +8,12 @@ $headings-font-weight: normal; // font is bold, so normal is standard bold
 //$font-size-base: 0.9rem;
 
 // Line-height
-$line-height-base: 1.3;
+$line-height-base: 1.2;
 //$line-height-lg: 1;
 //$line-height-sm: 1;
+
+// Letter spacing
+$letter-spacing: -0.05em;
 
 // Colors
 $enable-gradients: true;
