--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -6,7 +6,7 @@ textarea {
     margin: 0;
     font-family: inherit;
     font-size: inherit;
-    line-height: inherit;
+    line-height: 1.2;
 }
 
 
