Postcode autosuggest restyle.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -47,6 +47,7 @@ $lighterGrey: #ececec;
 $lightestGrey: #1b1b1b;
 $darkerGrey: #1c1c1c;
 $darkestGrey: #707070;
+$newGrey: #747474;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
 $darkBlue: #1b71f3;
