--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -47,20 +47,23 @@
 
     p {
         color: #333333;
-        font-size: 25px;
+        @include font-size(25);
         width: 67%;
         margin: auto;
         font-weight: 500;
-        line-height: 30px;
     }
 
     .postcode-item {
+        @include font-size(14);
+        margin: 0;
+        text-align: left;
+        padding: 9px;
+
         &:hover {
-            background-color: $turq;
+            background-color: $newGrey;
             color: $white;
             cursor: pointer;
             width: 100%;
-            border-radius: 10px;
         }
     }
 }
@@ -74,7 +77,7 @@
 
     p {
         font-size: 24px;
-        line-height: 32px;
+        //line-height: 32px;
     }
 }
 
@@ -82,7 +85,7 @@
     li {
         list-style: none;
         font-size: 24px;
-        line-height: 28px;
+        //line-height: 28px;
         position: relative;
         padding-left: 63px;
         margin-bottom: 20px;
@@ -115,20 +118,20 @@
 }
 
 .postcode-autocomplete-container {
-    display: none;
-    width: 100%;
+    //display: none;
+    width: calc(100% - 18px);
+    position: absolute;
+    z-index: 5;
+    margin: 0 auto;
     overflow: hidden;
     transition: 1s linear;
     transition-delay: 0s;
-    margin-top: 20px;
+    //margin-top: 20px;
     //position: absolute;
 
     .ajax-box {
         width: 100%;
-        padding: 10px;
-        border-radius: 10px;
         background-color: #fff;
-        border: 2px solid #00cecd;
         max-height: 222px;
         overflow: auto;
     }
