--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -132,6 +132,7 @@
             font-weight: 500;
             letter-spacing: -1px;
             line-height: 28.8px;
+            padding: 7px 25px;
         }
     }
 
