Replace form submit button with html button

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -122,9 +122,13 @@ select.big {
     padding: 0 45px 0 16px;
 }
 
-// Custom container width
+// Custom container widths
 .container-980 {
     max-width: 980px;
+}
+
+.container-1028 {
+    max-width: 1028px;
 }
 
 .bg-teal {
