--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -235,14 +235,14 @@
 
     .special-offer-header {
         position: relative;
-        padding: 0 50px 0 30px;
+        padding: 0 20px;
         height: 65px;
         cursor: pointer;
 
         .offer-text {
-            margin-left: 10px;
+            //margin-left: 10px;
             line-height: 1;
-            max-width: 200px;
+            max-width: 270px;
 
             .offer-title {
                 @include font-size(18);
@@ -256,6 +256,7 @@
         .open-text {
             .hospital-name {
                 @include font-size(18);
+                min-height: 45px;
             }
 
             display: none;
@@ -278,7 +279,7 @@
         span {
             position: absolute;
             right: 20px;
-            top: 25px;
+            top: 17px;
             width: 20px;
             height: 20px;
             line-height: 60px;
@@ -312,7 +313,7 @@
 }
 
 .special-offer-body {
-    padding: 0 25px 25px 80px;
+    padding: 0 25px 25px 20px;
     display: none;
     height: 200px;
 
