- Hide the other button for closing the corporate content and show the first one

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -447,8 +447,8 @@
 .result-item.corporate-content-open {
     .hospital-details {
         .btn-more-info {
-            opacity: 0;
-            pointer-events: none;
+            //opacity: 0;
+            //pointer-events: none;
         }
     }
 }
