--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -117,8 +117,8 @@ input.big,
 select.big {
     font-size: 18px;
     font-weight: 500;
-    height: 60px;
-    line-height: 60px;
+    //height: 60px;
+    //line-height: 60px;
     padding: 0 45px 0 16px;
 }
 
