Search form layout

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -119,7 +119,7 @@ select.big {
     font-weight: 500;
     //height: 60px;
     //line-height: 60px;
-    padding: 0 45px 0 16px;
+    padding: 16px 45px 16px 16px;
 }
 
 // Custom container widths
