--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -118,7 +118,7 @@
     top: 25px;
 }
 
-.postcode-autocomplete-container {
+.postcode-results-container {
     display: none;
     width: calc(100% - 18px);
     position: absolute;
@@ -141,7 +141,7 @@
 }
 
 // Home radius input
-.home-radius-parent {
+.radius-parent {
     display: none;
 }
 
