Max width on some popovers and remove titles

--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -1,6 +1,6 @@
 // Popover
 
-[data-toggle*="popover"]{
+[data-toggle*="popover"] {
     cursor: pointer;
 }
 
@@ -169,6 +169,10 @@
 
     &-cqc {
         min-width: 400px;
+    }
+
+    &.popover-max-width {
+        width: 200px;
     }
 }
 
