Tweaks to corporate content and solutions bar

--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -278,11 +278,11 @@
         svg,
         span {
             position: absolute;
+            @include v-c;
             right: 20px;
-            top: 17px;
+            //top: 17px;
             width: 20px;
             height: 20px;
-            line-height: 60px;
             transition: $transition;
         }
 
