--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -401,10 +401,6 @@
             }
         }
 
-        input[type="submit"].btn-enquire {
-
-        }
-
         &.btn-enquire-pink {
             border-radius: 10px;
             background: $white;
@@ -443,15 +439,9 @@
 
         // Button inside special offer tabs in solutions bar
         &.btn-enquire-now {
-            font-family: "SofiaPro", sans-serif;
             color: $pink;
             background-color: $white;
-            height: 29px;
-            width:122px;
-            line-height: 24px;
-            padding: 0 30px 0 17px;
-            font-weight: 400;
-            letter-spacing: -0.7px;
+            padding: 7px 30px 7px 17px;
             @include font-size(14);
 
             &:after {
