--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -120,7 +120,7 @@
             @include placeholder {
                 font-size: 14px;
                 line-height: 1.2;
-                color: #1c1c1c;
+                color: $darkerGrey;
                 font-family: 'SofiaPro-Medium', sans-serif;
             }
         }
