- New `Enquiry Modal`

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -40,6 +40,7 @@ $doctorGreen: #80efce;
 //Main Template colours
 $darkerWhite: #f5f5f5;
 $darkestWhite: #ebebeb;
+$darkestBlue: #03385f;
 $aqua: #00cecd;
 $darkerAqua: #00b5b4;
 $lightGrey: $darkestWhite;
