--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -6,8 +6,7 @@
 
 .corporate-content {
     background-color: #fff;
-    //border-bottom: 20px solid $turq;
-    box-shadow: inset 0px -20px 0px 0px $turq;
+    //box-shadow: inset 0px -20px 0px 0px $turq;
 
 }
 
@@ -21,7 +20,7 @@
     //@extend .bg-teal;
     padding-left: 8px;
     //padding-top: 18px;
-    padding-bottom: 60px;
+    //padding-bottom: 60px;
 
     .nav-tabs {
         //box-shadow: inset 0px -2px 0px 0px rgba(236, 236, 236, 1);
