--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -311,7 +311,7 @@
 
         &.btn-more-info {
             @include font-size(14);
-            padding: 5px 25px 5px 8px;
+            padding: 0 25px 0 8px;
             border-radius: 4px 4px 0 0;
 
             svg {
