- Changed the Solution bar to grey - Changed the Filter button to grey - Changed the Header of the table to grey

--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -113,6 +113,8 @@
     a {
         @include font-size(14);
         font-weight: 400;
+        color: $darkerGrey;
+        letter-spacing: -0.7px;
     }
 }
 
