--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -57,7 +57,7 @@
 }
 
 .footer-lower {
-    background-color: #363636;
+    background-color: $footerGrey;
 
     &__menu {
         margin-left: -25px;
