--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -191,9 +191,7 @@
     }
 
     .result-item-parent {
-        background-color: $turq;
-
-
+        background-color: $footerGrey;
     }
 
     .result-item-header,
