CQC green star and tweaks to solutions bar/filter button

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -185,7 +185,8 @@ select.big {
 
 // CQC rating colours
 .bg-outstanding {
-    background: $goldStar;
+    //background: $goldStar;
+    background-color: $cqcGreen;
 }
 
 .bg-good {
