--- a/resources/sass/components/_solutions.scss
+++ b/resources/sass/components/_solutions.scss
@@ -54,7 +54,7 @@
 
 
         .compare-button-title {
-            background-color: $darkestGrey;
+            background-color: #535353;
             cursor: pointer;
 
             svg { // #compare_heart
