--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -121,18 +121,22 @@
                 display: none;
             }
         }
-        .bottom-left-buttton {
+
+        .btn-blog-back {
             position: absolute;
             bottom: 20px;
             //left: 0px;
-            width: 169px;
-            height: 44px;
+            width: 170px;
+            height: 45px;
+            line-height: 45px;
             border-radius: 0 10px 10px 0;
-            font-size: 20px;
-            font-weight: 500;
-            letter-spacing: -1px;
-            line-height: 28.8px;
-            padding: 7px 25px;
+            @include font-size(20);
+            padding: 0 15px 0 40px;
+
+            svg {
+                @include v-c;
+                left: 20px;
+            }
         }
     }
 
