Find hospital button transition

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -308,7 +308,7 @@ select.big {
         @extend .btn;
         @extend .btn-m;
         @extend .btn-grad;
-        @extend .btn-teal;
+        @extend .btn-turq;
 
         text-align: center !important;
         display: inline-block;
