--- a/resources/sass/_version_1.scss
+++ b/resources/sass/_version_1.scss
@@ -481,7 +481,7 @@ a, .transition, button {
     &.btn-mg-top {
         margin-top: 20px;
     }
-    &.btn-teal {
+    &.btn-turq {
         background: #00cecd;
         background: -webkit-linear-gradient(legacy-direction(90deg), #00cecd, #00cecd, #00e09d);
         background: linear-gradient(90deg, #00cecd, #00cecd, #00e09d);
