--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -119,7 +119,7 @@
 }
 
 .aqua-chevron {
-    color: $aqua;
+    //color: $aqua;
     @include v-c;
     right: 20px;
     //top: 25px;
@@ -130,7 +130,7 @@
     width: calc(100% - 18px);
     position: absolute;
     left: 9px;
-    z-index: 5;
+    z-index: 10;
     margin: 0 auto;
     overflow: hidden;
     transition: 1s linear;
