Completed tweaks from Zoom meeting 14/11/19

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -221,7 +221,7 @@ select::-ms-expand {
 textarea {
     width: 100%;
     border-radius: 10px;
-    border: 2px solid $darkestWhite;
+    //border: 2px solid $darkestWhite;
     background-color: #ffffff;
     padding: 1rem;
     padding-top: 7px;
