--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -592,4 +592,14 @@
         opacity: 0;
         visibility: hidden;
     }
+
+    &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: #1b1b1b;
+        opacity: 0.6;
+        z-index: 5;
+    }
 }
