--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -182,6 +182,7 @@ $hospital-image-width: 150px;
 $enable-gradients: false;
 $carousel-control-prev-icon-bg: url('../images/icons/carousel-prev.svg');
 $carousel-control-next-icon-bg: url('../images/icons/carousel-next.svg');
-$carousel-control-icon-width: 10px;
-$carousel-control-icon-height: 10px;
+$carousel-control-icon-width: 24px;
+$carousel-control-icon-height: 24px;
 $carousel-control-opacity: 1;
+$carousel-control-width: auto;
