--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -94,6 +94,13 @@
         .video-caption {
             margin-top: 5px;
         }
+
+        .carousel-control-prev {
+            left: -12px;
+        }
+        .carousel-control-next {
+            right: -12px;
+        }
     }
 
     .special-offers-tab {
@@ -151,5 +158,19 @@
     .carousel-control-next-icon {
         width: 20px;
         height: 20px;
+    }
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    transition: $transition;
+
+    &:hover {
+        .carousel-arrow-bg {
+            fill: #fff;
+        }
+        .carousel-arrow-chevron {
+            fill: $turq;
+        }
     }
 }
