--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -605,3 +605,74 @@
         text-decoration: none;
     }
 }
+
+.btn-cc-close {
+    padding: 0 24px 0 8px;
+    height: 22px;
+    line-height: 22px;
+    display: inline-block;
+    border: none;
+    border-radius: 31px;
+    background-color: #000000 !important;
+    z-index: 5;
+    transition: $transition;
+    @include font-size(14);
+
+    @include hover {
+        opacity: 1 !important;
+        background-color: $turq !important;
+    }
+
+    svg {
+        @include v-c;
+        right: 8px;
+        width: 7px;
+        height: 7px;
+
+        path {
+            fill: #fff;
+        }
+    }
+}
+
+.btn-modal-close {
+    //width: 60px;
+    //height: 29px;
+    padding: 6px 24px 6px 8px;
+    display: inline-block;
+    border: none;
+    border-radius: 31px;
+    background-color: #000000 !important;
+    z-index: 5;
+    opacity: 1;
+    top: 5px;
+    right: 5px;
+    transition: $transition;
+    @include font-size(14);
+
+    @include media-breakpoint-up(lg){
+        top: 0;
+        right: 0;
+        transform: translate(50%, -50%);
+    }
+
+    @include hover {
+        opacity: 1 !important;
+        background-color: $turq !important;
+    }
+
+    span {
+        background-color: inherit;
+    }
+
+    svg {
+        @include v-c;
+        right: 8px;
+        width: 7px;
+        height: 7px;
+
+        path {
+            fill: #fff;
+        }
+    }
+}
