--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -439,27 +439,25 @@
         }
 
         &.btn-enquire-pink {
-            border-radius: 10px;
+            //border-radius: 10px;
+            border-radius: 20px;
             background: $white;
             color: $pink;
-            @include font-size(14);
-            line-height: 13px;
-            height: 40px;
+            @include font-size(12);
             position: relative;
-            padding: 5px 15px 5px 40px;
+            padding: 10px 10px 10px 35px;
             display: inline-block;
             text-align: left;
-            max-width: 117px;
+            width: 131px;
 
             &:before {
                 content: '';
                 background-image: url('../images/icons/circle-check-pink.svg');
-                @include icon-bg-center;
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 40px;
-                height: 40px;
+                @include icon-bg-center(100%);
+                @include v-c;
+                left: 10px;
+                width: 20px;
+                height: 20px;
             }
 
             &:hover {
